--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,10 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
+
 @plugin '@tailwindcss/typography';
+
+@import 'uploadthing/tw/v4';
+@source "../node_modules/@uploadthing/react/dist"; /** <-- depends on your project structure */
 
 @custom-variant dark (&:is(.dark *));
 
